WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12788
REGRESSION (
r19631
): Going back one page in history has a noticeable delay
https://bugs.webkit.org/show_bug.cgi?id=12788
Summary
REGRESSION (r19631): Going back one page in history has a noticeable delay
David Kilzer (:ddkilzer)
Reported
2007-02-16 07:10:40 PST
Summary: When using Cmd-Left Arrow or using the Safari browser back button to go back one page in history, there is a noticeable (and annoying) delay in recent nightly/ToT builds. Steps to reproduce: 1. Open Safari/WebKit. 2. Open URL with lots of links:
http://lists.macosforge.org/pipermail/webkit-unassigned/2007-February/date.html
3. Click on a link (any link). 4. Hit the browser back button (or Cmd-Left Arrow). Expected results: The previous page should be displayed in a reasonable amount of time. Actual results: The previous page has a noticeable pause (at least 1 sec on my old/slow PowerBook G4) before going back. Regression: This is a regression from shipping Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8L127). Tested with a local debug build of WebKit
r19653
with the previously stated software. Notes: Does the internal Safari PLT suite test going backwards, too, or is that too non-deterministic? This is a recent regression (within the last week or so).
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-02-16 07:14:02 PST
(In reply to
comment #0
)
> Actual results: > > The previous page has a noticeable pause (at least 1 sec on my old/slow > PowerBook G4) before going back.
But not THAT old/slow! :)
mitz
Comment 2
2007-02-16 08:08:38 PST
The delay is much shorter, but still noticeable, in a release build. I'm seeing the delay with the
r19645
nightly but not with the
r18516
nightly (didn't try to find the newest one that still doesn't have the delay). Creating a page that has even more links than the test page may make it easier to sample or Shark Safari.app and see what's causing the delay.
mitz
Comment 3
2007-02-16 11:25:47 PST
struct VectorComparer<false, T>::compare() in <
http://trac.webkit.org/projects/webkit/changeset/19631
> isn't very helpful :-)
Anders Carlsson
Comment 4
2007-02-16 11:27:26 PST
Committed revision 19661.
David Kilzer (:ddkilzer)
Comment 5
2007-06-24 12:04:48 PDT
Mass removal of NeedsRadar keyword from my bugs that have already been RESOLVED.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug