        Reviewed by Mitz.

http://bugs.webkit.org/show_bug.cgi?id=12788
        REGRESSION: Going back one page in history has a noticeable delay

        Um...if all elements in two vectors are equal, then I guess we could say that
        the two vectors are equal too.

        * wtf/Vector.h:
        (WTF::):



Canonical link: https://commits.webkit.org/16529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19661 268f45cc-cd09-0410-ab3c-d52691b4dbfc