JavaScriptCore/wtf/Vector.h
@@ -187,7 +187,7 @@ namespace WTF {
             for (size_t i = 0; i < size; ++i)
                 if (a[i] != b[i])
                     return false;
-            return false;
+            return true;
         }
     };
 
